Wek #735 auslesen der ldap user tokens (#742)
* anderer toList Aufruf, damit Liste nicht mehr Immutable ist

* Changelogeintrag hinzufügen